@startuml ViwesUML
package Views {
    package Chat {
        class "ChatListItem" {
            +ChatViewModel* chatViewModel
            +User* userItem
        }
        "ChatListItem" o-- "ChatViewModel"
        "ChatListItem" o-- "User"

        class "MessageListItem" {
            +ChatViewModel* chatViewModel
            +Message* messageItem
            +int* index
        }
        "MessageListItem" o-- "ChatViewModel"
        "MessageListItem" o-- "Message"

        class "ChatAcceptDenyInput" {
            +ChatViewModel* chatViewModel
        }
        "ChatAcceptDenyInput" o-- "ChatViewModel"

        class "ChatTextInput" {
            +ChatViewModel* chatViewModel
        }
        "ChatTextInput" o-- "ChatViewModel"

        class "ChatsListConstructor" {
            +void scrollListener()
        }
        "ChatsListConstructor" o-- "ChatViewModel"

        class "MessagesListConstructor" {
            +Message* messageItem
            +void scrollListener()
        }
        "MessagesListConstructor" o-- "ChatViewModel"
        "MessagesListConstructor" o-- "Message"

        package BaseUser {
            package AnonymousChat::ActiveChatsList {
                class "ActiveChatsListScreen" {
                    +ChatViewModel* chatViewModel
                    +BaseUser* createUserCallback()
                    +void initChats()
                }
                "ActiveChatsListScreen" o-- "ChatViewModel"
            }

            package AnonymousChat::PendingChatsList {
                class "PendingChatsListScreen" {
                    +ChatViewModel* chatViewModel
                    +BaseUser* createUserCallback()
                    +void initChats()
                }
                "PendingChatsListScreen" o-- "ChatViewModel"
            }

            package ChatWithExperts {
                class "ChatWithExpertChatsListScreen" {
                    +ChatViewModel* chatViewModel
                    +Expert* createUserCallback()
                    +void initChats()
                }
                "ChatWithExpertChatsListScreen" o-- "ChatViewModel"
            }
        }

        package ChatPage {
            class "ChatPageScreen" {
                +ChatViewModel* chatViewModel
            }
            "ChatPageScreen" o-- "ChatViewModel"
        }

        package Expert {
        }
    }
}
@enduml